--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <input required placeholder="imagen.png / imagen.jpeg" type="text" id="image" data-image>
 
                     <input type="file" id="image-file" name="file" accept="image/png, image/jpeg">
-                    <label for="image-file"><i class="fa-solid fa-file-image"></i></label>
+                    <label for="image-file"></label>
 
                     <div class="form-btn__container">
                         <button class="upload-product__btn" type="submit">Listo</button>
