--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <header class="site-header">
         <nav>
             <img class="logo" src="./assets/Logo.svg">
-            <!-- <button class="shopping-toggle"><i class="fa-solid fa-arrow-up-from-bracket"></i></button> -->
         </nav>
     </header>
     <section class="main-wrapper">
@@ -60,22 +59,10 @@
                     </div>
                 </fieldset>
             </form>
-            <!-- <ul>
-                <li class="in-cart__item">
-                    <img>
-                    <h3>Producto</h3>
-                    <p>$$$</p>
-                    <button class="delete"><i class="fa-solid fa-trash"></i></button>
-
-                    <div class="quantity-field">
-                        <button class="btn-minus" data-field="quantity">-</button>
-                        <input type="number" step="1" value="1" name="quantity" class="input-quantity">
-                        <button class="btn-plus" data-field="quantity">+</button>
-                    </div>
-                </li>
-            </ul> -->
     </section>
-    <footer></footer>
+    <footer>
+        <p>Desarrollado por Nexus, 2025</p>
+    </footer>
     <script src="./js/script.js"></script>
     <script src="./js/productScript.js" type="module"></script>
 </body>
